# infoflow

./: .dockerignore  .gitignore  .plash  .sesskey  ACTIONS.md  Dockerfile  GOAL.md  PLAN.md  README.md  classes_db.html  classes_db.html.md  create_instances.html  create_instances.html.md  create_vizualisation.html  create_vizualisation.html.md  create_webapp.html  create_webapp.html.md  define_classes.html  define_classes.html.md  index.html  index.html.md  main.py  main_bup.py  pyproject.toml  requirements.txt  robots.txt  search.json  settings.ini  setup.sh  sitemap.xml  test.ipynb  test_schema.py  testform.py  thinktank_phase1.py
.aichats/: 2025-10-07_fix-improvement-id-validation.json  2025-10-08_fasthtml-main-py-analysis_a.json  2025-10-21_close-issue-13-ai-context.json  2025-10-21_fasthtml-code-analysis-main-py.json  2025-10-24_fix-issue-15-slug-unique_a.json  2025-10-24_fix-issue-7_a.json  2025-10-25_resource-add-flow_a.json  2025-10-31_tool-description-field_a.json  2025-11-23_fix-informationitem-fromdb-a.json  2025-11-30_improvement-db-schema-and-pydantic.md  2025-11-30_pydantic-db-improvement_a.json  2025-11-30_pydantic-db-improvement_b.json  rawjson.json
aicontext/: abbreviations.md  fasthtml.md  nbdev.md
data/: infoflow.db  infoflow.db-shm  infoflow.db-wal
infoflow/: _modidx.py  clasdef.py  classdb.py  creinst.py  viz.py  webapp.py
nbs/: .sesskey  00_classes_db.ipynb  00_define_classes.ipynb  01_create_instances.ipynb  02_create_vizualisation.ipynb  03_create_webapp.ipynb  :inmemory:-shm  :inmemory:-wal  index.ipynb  nbdev.yml  sidebar.yml
(+10 files in other folders)
