[project]
name="infoflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python=">=3.11"
dependencies = [
    "graphix>=0.3.2",
    "graphviz>=0.21",
    "pre-commit>=4.3.0",
    "pydantic>=2.11.7",
]

[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "nbdev>=2.4.5",
]
