[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name="infoflow"
dynamic = ["version"]
description = "Visualisation and description of Jelle's information process workflow"
readme = "README.md"
requires-python=">=3.11"
license = {text = "Apache-2.0"}
authors = [{name = "Hopsakee", email = "jdejong@posteo.nl"}]
keywords = ['nbdev', 'jupyter', 'notebook', 'python']
classifiers = ["Natural Language :: English", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3 :: Only"]
dependencies = [
    "graphviz>=0.21",
    "hopsa>=0.3.0",
    "monsterui>=1.0.44",
    "pydantic>=2.12.5",
    "python-fasthtml>=0.12.47",
]

[project.urls]
Repository = "https://github.com/Hopsakee/infoflow"
Documentation = "https://Hopsakee.github.io/infoflow"

[project.entry-points.nbdev]
infoflow = "infoflow._modidx:d"

[tool.setuptools.dynamic]
version = {attr = "infoflow.__version__"}

[tool.setuptools.packages.find]
include = ["infoflow"]

[tool.nbdev]
